adds target blank to links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <address>Idaho Falls, Idaho<br>
         (208) 403-4943<br>
         bradylbsee&#64;gmail.com <br>
-        <a href="https://leetcode.com/u/blburgen/" class="white">LeetCode.com/blburgen</a>
+        <a href="https://leetcode.com/u/blburgen/" class="white" target="_blank">LeetCode.com/blburgen</a>
       </address>
     </div>
     <div class="skills">
@@ -101,8 +101,8 @@
               <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - June 2025</li>
               <li class="degrees">Certificate in Back-End Software Development </li>
               <ul>
-                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Completed Feb. 2025</a></li>
-                <li><a href="https://tools.promineotech.com/student_certs/9ccbe9ba_bradylbsee.pdf">Certificate</a></li>
+                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view" target="_blank">Completed Feb. 2025</a></li>
+                <li><a href="https://tools.promineotech.com/student_certs/9ccbe9ba_bradylbsee.pdf" target="_blank">Certificate</a></li>
                 <li>Developed applications using Java, Spring Boot, Rest API, and more</li>
               </ul>
               <li class="degrees">Certificate in Front-End Software Development </li>
@@ -114,7 +114,7 @@
               <li class="colleges">Western Governors University | Remote <br> July 2024 - Jan. 2025</li>
               <li class="degrees">Certificate in Front-End Development </li>
               <ul>
-                <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url">Certificate Link</a></li>
+                <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url" target="_blank">Certificate Link</a></li>
                 <li>Developed applications using JavaScript, HTML, CSS, Angular, and more</li>
               </ul>
               <br>
@@ -131,19 +131,19 @@
               <li>Introduction to Computer Science and Programming Using Python</li>
               <ul>
                 <li>edX | March 2017</li>
-                <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">Certificate Link</a></li>
+                <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617" target="_blank">Certificate Link</a></li>
               </ul>
               <br>
               <li>Intro to Programming Nanodegree</li>
               <ul>
                 <li>Udacity | February 2017</li>
-                <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">Certificate Link</a></li>
+                <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8" target="_blank">Certificate Link</a></li>
               </ul>
               <br>
               <li>Introduction to Python for Data Science</li>
               <ul>
                 <li>edX | February 2017</li>
-                <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">Certificate Link</a></li>
+                <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73" target="_blank">Certificate Link</a></li>
               </ul>
               <br>
               <li>Fundamentals of Engineering</li>
