--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
           <div class="col-12 col-lg-6 border-2 border-start border-end">
             <div class="fw-bold text-center">Colleges/Universities</div>
             <ul class="no-bullets">
-              <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - June 2025</li>
+              <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - July 2025</li>
               <li class="degrees">Certificate in Back-End Software Development </li>
               <ul>
                 <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view" target="_blank">Completed Feb. 2025</a></li>
-                <li><a href="https://tools.promineotech.com/student_certs/9ccbe9ba_bradylbsee.pdf" target="_blank">Certificate</a></li>
+                <li><a href="https://drive.google.com/file/d/1LPABLwIZW6I7gztLgohXjaacdqgUPYiB/view?usp=sharing" target="_blank">Certificate</a></li>
                 <li>Developed applications using Java, Spring Boot, Rest API, and more</li>
               </ul>
               <li class="degrees">Certificate in Front-End Software Development </li>
