--- a/index.html
+++ b/index.html
@@ -99,15 +99,16 @@
             <div class="fw-bold text-center">Colleges/Universities</div>
             <ul class="no-bullets">
               <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - July 2025</li>
-              <li class="degrees">Certificate in Back-End Software Development </li>
+              <li class="degrees">Certificate in Back-End Software Development (18-week/360-hours)</li>
               <ul>
                 <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view" target="_blank">Completed Feb. 2025</a></li>
                 <li><a href="https://drive.google.com/file/d/1LPABLwIZW6I7gztLgohXjaacdqgUPYiB/view?usp=sharing" target="_blank">Certificate</a></li>
                 <li>Developed applications using Java, Spring Boot, Rest API, and more</li>
               </ul>
-              <li class="degrees">Certificate in Front-End Software Development </li>
+              <li class="degrees">Certificate in Front-End Software Development (18-week/360-hours)</li>
               <ul>
-                <li>Anticipated Completion Date June 2025</li>
+                <li><a href="https://drive.google.com/file/d/1Dyb5niCA1FWoZ9C9fhoJYPuI2xFp0Z60/view?usp=sharing" target="_blank">Date July 2025</a></li>
+                <li><a href="https://drive.google.com/file/d/1Dyb5niCA1FWoZ9C9fhoJYPuI2xFp0Z60/view?usp=sharing" target="_blank">Certificate</a></li>
                 <li>Developed applications using JavaScript, HTML, CSS, React, and more</li>
               </ul>
               <br>
