--- a/index.html
+++ b/index.html
@@ -95,9 +95,22 @@
       <h2>Education</h2>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12 col-lg-6 border-2 border-start border-end">
+          <div class="col-12 col-lg-6 border-2 border-start border-end border-bottom mb-4">
             <div class="fw-bold text-center">Colleges/Universities</div>
             <ul class="no-bullets">
+              <li class="colleges">Brigham Young University-Idaho / BYU Pathway | Remote <br> Jun. 2025 -  Apr. 2027</li>
+              <li class="degrees">B.A.S. Software Development</li>
+              <ul>
+                <li>Anticipated Apr. 2027</li>
+                <li class="degrees">Certificate in Software Development</li>
+              </ul>
+              <li class="degrees">A.A.S Software Development</li>
+              <ul>
+                <li>Anticipated Oct. 2026</li>
+                <li class="degrees">Certificate in Web Development</li>
+                <li class="degrees">Certificate in Web & Computer Programming</li>
+              </ul>
+              <br>
               <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - July 2025</li>
               <li class="degrees">Certificate in Back-End Software Development (18-week/360-hours)</li>
               <ul>
@@ -126,24 +139,30 @@
               </ul>
             </ul>
           </div>
-          <div class="col-12 col-lg-6 border-2 border-start border-end">
+          <div class="col-12 col-lg-6 border-2 border-start border-end border-bottom mb-4">
             <div class="fw-bold text-center">Certificates</div>
             <ul class="no-bullets">
+              <li><img src="./Tech+-png.png" alt="CompTIA Tech+ Certification" width="30%"></li>
+              <ul>
+                <li>CompTIA | July 2025</li>
+                <li><a href="./CompTIA Tech+ certificate.pdf">Certificate Link</a></li>
+              </ul>
+              <br>
               <li>Introduction to Computer Science and Programming Using Python</li>
               <ul>
-                <li>edX | March 2017</li>
+                <li>edX | Mar. 2017</li>
                 <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617" target="_blank">Certificate Link</a></li>
               </ul>
               <br>
               <li>Intro to Programming Nanodegree</li>
               <ul>
-                <li>Udacity | February 2017</li>
+                <li>Udacity | Feb. 2017</li>
                 <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8" target="_blank">Certificate Link</a></li>
               </ul>
               <br>
               <li>Introduction to Python for Data Science</li>
               <ul>
-                <li>edX | February 2017</li>
+                <li>edX | Feb. 2017</li>
                 <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73" target="_blank">Certificate Link</a></li>
               </ul>
               <br>
