navbar stays viewable

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Burgener Brady</title>
 </head>
 <body>
-  <div class="container-fluid navbar-expand-md text-light">
+  <div class="container-fluid navbar-expand-md text-light sticky-element">
     <nav class="navbar-nav d-flex justify-content-evenly">
       <a class="text-center nav-link col-md-4 rounded-3 navLinkThree bg-secondary" href=".\">Home page</a>
       <a class="text-center nav-link col-md-4 rounded-3 navLinkThree bg-primary" href=".\projects\">Projects</a>
