--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="col-12 col-lg-6 border-2 border-start border-end border-bottom mb-4">
             <div class="fw-bold text-center">Colleges/Universities</div>
             <ul class="no-bullets">
-              <li class="colleges">Brigham Young University-Idaho / BYU Pathway | Remote <br> Jun. 2025 -  Apr. 2027</li>
+              <li class="colleges">Brigham Young University-Idaho / BYU Pathway | Remote <br> Jun. 2025 -  Apr. 2027 <span class="align_right">GPA = 4.0</span></li>
               <li class="degrees">B.A.S. Software Development</li>
               <ul>
                 <li>Anticipated Apr. 2027</li>
@@ -109,6 +109,12 @@
                 <li>Anticipated Oct. 2026</li>
                 <li class="degrees">Certificate in Web Development</li>
                 <li class="degrees">Certificate in Web & Computer Programming</li>
+              </ul>
+              <br>
+              <li class="colleges">Brigham Young University-Idaho <br> Sept. 2025 -  Apr. 2027 <span class="align_right">GPA = 4.0</span></li>
+              <li class="degrees">Cybersecurity Certificate</li>
+              <ul>
+                <li>Anticipated Apr. 2027</li>
               </ul>
               <br>
               <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - July 2025</li>
